# StaticMapping

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.bionic  Dockerfile.focal  Dockerfile.xenial  Doxyfile  LICENSE  README.Chinese.md  README.md  make.sh  mapping.sh  mapping_kitti.sh  mapping_lidar_imu.sh  mapping_lidar_imu_gps.sh  mapping_lidar_only.sh
.github/workflows/: docker.yml
back_end/: CMakeLists.txt  isam_optimizer.cc  isam_optimizer.h  loop_detector.cc  loop_detector.h  loop_detector_options.h  map_gps_matcher.cc  map_gps_matcher.h  map_utm_matcher.cc  map_utm_matcher.h  multi_trajectory_optimizer.cc  multi_trajectory_optimizer.h  odom_to_pose_factor.h  options.h  view_graph.cc  view_graph.h
back_end/deprecated/: map_gps_matcher.h
back_end/multi_trajectory/: multi_trajectory_optimizer.cc  multi_trajectory_optimizer.h
builder/: CMakeLists.txt  cloud_types.cc  cloud_types.h  data_collector.cc  data_collector.h  data_types.cc  data_types.h  frame.cc  frame.h  frame_base.cc  frame_base.h  frame_base_impl.h  imu_tracker.cc  imu_tracker.h  map_builder.cc  map_builder.h  map_builder_options.cc  map_package.cc  map_package.h  map_utm_matcher.cc  map_utm_matcher.h  memory_manager.cc  memory_manager.h  msg_conversion.cc  msg_conversion.h  multi_resolution_voxel_map.cc  multi_resolution_voxel_map.h  multi_trajectory_map_builder.cc  multi_trajectory_map_builder.h  offline_calibration.cc  plane_detector.h  pose_extrapolator.cc  pose_extrapolator.h  random_sample_with_plane_detect.h  sensors.h  simple_frame.cc  simple_frame.h  simple_frame_impl.h  simple_pose_extrapolator.cc  simple_pose_extrapolator.h  (+7 more)
builder/cost_functions/: gps_map_match.h  odom_map_match.h  utm_map_match.h
builder/data/: CMakeLists.txt  cloud_types.cc  cloud_types.h  data_collector.cc  data_collector.h  data_types.cc  data_types.h
builder/data/test/: CMakeLists.txt  test_cloud_types.cc
builder/deprecated/: offline_calibration.h
builder/multi_trajectory/: multi_trajectory_map_builder.cc  multi_trajectory_map_builder_options.cc
builder/sensor_fusions/: imu_gps_ekf.cc  imu_gps_ekf.h  imu_gps_tracker.cc  imu_gps_tracker.h  interface.h
cmake_modules/: FindBlosc.cmake  FindCudaUtils.cmake  FindLibLAS.cmake  FindOpenVDB.cmake
common/: CMakeLists.txt  atomic_wrapper.h  bounding_box.cc  bounding_box.h  eigen_hash.h  eigen_pitfalls_avoidence.h  file_utils.cc  file_utils.h  macro_defines.cc  macro_defines.h  make_unique.h  math.cc  math.h  mutex.h  octree.cc  octree.h  point_utils.h  simple_thread_pool.h  simple_time.cc  simple_time.h  time.cc  time.h
common/example/: CMakeLists.txt  atomic_wrapper_example.cc
common/performance/: process_info.cc  process_info.h  simple_prof.cc  simple_prof.h
common/test/: CMakeLists.txt  test_bbox.cc  test_octree.cc  test_simple_time.cc
config/: lidar_imu_default.xml  lidar_imu_gps_default.xml  lidar_only.xml  lidar_only_ford.xml  lidar_only_kitti.xml  static_mapping.rviz  static_mapping_default.xml
descriptor/: CMakeLists.txt  m2dp.cc  m2dp.h
doc/: kitti_evaluation.md  mainpage.md
pre_processors/: CMakeLists.txt  filter_axis_range.cc  filter_axis_range.h  filter_bounding_box.cc  filter_bounding_box.h  filter_factory.cc  filter_factory.h  filter_ground_removal.cc  filter_ground_removal.h  filter_ground_removal2.cc  filter_ground_removal2.h  filter_interface.cc  filter_interface.h  filter_random_sample.cc  filter_random_sample.h  filter_range.cc  filter_range.h  filter_range_image.cc  filter_range_image.h  filter_semantic.h  filter_statistic_removal.cc  filter_statistic_removal.h  filter_voxel_grid.cc  filter_voxel_grid.h  plane_detector.h  processor_interface.h  random_sample_with_plane_detect.h  xml_interface.h
pre_processors/test/: CMakeLists.txt  test_filter_axis_range.cc  test_filter_bounding_box.cc  test_filter_random_sample.cc  test_filter_range.cc  test_filter_voxel_grid.cc
registrators/: CMakeLists.txt  icp_fast.cc  icp_fast.h  icp_libicp.cc  icp_libicp.h  icp_pointmatcher.cc  icp_pointmatcher.h  interface.cc  interface.h  lego_loam.h  multiview_registrator_interface.h  multiview_registrator_lum_pcl.h  ndt.cc  ndt.h  ndt_gicp.cc  ndt_gicp.h  registrator_interface.h
registrators/cuda/: CMakeLists.txt  icp_cuda.cu  icp_cuda.h
registrators/deprecated/: icp_factor.h
registrators/pclomp/: voxel_grid_covariance_omp_impl.hpp
ros_node/: CMakeLists.txt  join_maps_node.cpp  kitti_reader.cc  kitti_reader.h  msg_conversion.cc  msg_conversion.h  playable_bag.cc  playable_bag.h  static_mapping_node.cpp  tf_bridge.cc  tf_bridge.h  urdf_reader.cc  urdf_reader.h
setup/: Dockerfile.focal.base  Dockerfile.xenial.base  install_geographiclib.sh  install_gtsam.sh  install_libnabo.sh  install_libpointmatcher.sh
setup/GeographicLib-1.50.1/: CMakeLists.txt  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
setup/GeographicLib-1.50.1/cmake/: CMakeLists.txt  Makefile.in  project-config.cmake.in
setup/GeographicLib-1.50.1/doc/: GeographicLib.dox.in  Makefile.in  NETGeographicLib.dox  doxyfile.in  geodesic-c.dox  geodesic-for.dox
setup/GeographicLib-1.50.1/examples/: CMakeLists.txt  GeoidToGTX.cpp  Makefile.in
setup/GeographicLib-1.50.1/include/: Makefile.in
setup/GeographicLib-1.50.1/java/: pom.xml
setup/GeographicLib-1.50.1/js/: GeographicLib.md  Makefile.in  README.md  package.json
setup/GeographicLib-1.50.1/man/: CartConvert.1  ConicProj.1  (+19 more)
test/: CMakeLists.txt  test_helper.cc  test_helper.h
third_parties/: CMakeLists.txt
third_parties/libicp/: CMakeLists.txt  consistent_rubust_icp.h  demo.cc  icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPlane.h  icpPointToPoint.cpp  icpPointToPoint.h  kdtree.cpp  matrix.cpp
tools/: CMakeLists.txt  bin_viewer.cc  check_cuda.cu  cloud_compressor.cc  fuse_with_hdmap.cc  join_pieces.cc  path_statistic.cc  pcd_sampler.cc  pcd_to_las.cc  pcl_viewer_normals.cc
tools/scripts/: ford_to_bin.py  fuse_with_hdmap.sh  join_pieces.sh  mem_analyse.py  monitor.py  multi_mapping.sh  path_statistic.sh  plot.py  read_pose.m  sample_static_map.sh
urdf/: test.urdf  test2.urdf  test_forder.urdf
(+88 files in other folders)
